cmake_minimum_required (VERSION 3.0)
project (MY_PROJ)
find_package(SCI REQUIRED PATHS "/home/t-anweshb/Desktop/EzPC/SCI/build/install")

macro(add_clear name)
 add_executable(${name}_clear "${name}_64_cpp0.cpp")
 target_link_libraries(${name}_clear SCI::SCI-OT)
 target_compile_options(${name}_clear PRIVATE -w)
endmacro()

macro(add_secure name)
 add_executable(${name}_secure "${name}_60_sci_OT0.cpp")
 target_link_libraries(${name}_secure SCI::SCI-OT)
 target_compile_options(${name}_secure PRIVATE -w)
endmacro()

add_clear(conv5_dense_single_normal)
add_clear(conv5_dense_multi_normal)
add_clear(conv5_group_normal)
add_clear(conv5_dense_single_winograd)
add_clear(conv5_dense_multi_winograd)
add_clear(conv5_group_winograd)

add_secure(conv5_dense_single_normal)
add_secure(conv5_dense_multi_normal)
add_secure(conv5_group_normal)
add_secure(conv5_dense_single_winograd)
add_secure(conv5_dense_multi_winograd)
add_secure(conv5_group_winograd)
